# move-to-gnucash

./: .gitignore  2016-12-31 Sample Balances.csv  Pipfile  README.md  conftest.py  pylintrc  pyproject.toml
examples/: do_example.py  sample_balances.csv  sample_balances_user.csv
move2gnucash/: file_operations.py
src/move2gnucash/: __main__.py  account_maps.py  data_maps.py  data_preparation.py  field_mappings.ini  file_operations.py  migrations.py  transaction_maps.py  utils.py
tests/: conftest.py  preprocessed_transactions.fixture.csv  test_account_maps.py  test_data_maps.py  test_file_operations.py  test_transaction_maps.py  test_utils.py
tests/integration/: test_migrations.py
tests/integration/fixtures/: detailed_book.py
tests/test_move2gnucash/: test_file_operations.py
tests/unit/: test_data_maps.py  test_data_preparation.py  test_file_operations.py  test_utils.py
tests/unit/fixtures/: 2016_12_31_net_worth.fixture.csv  categories.fixture.csv  expenses.fixture.csv  inc_exp_trans.fixture.csv  mapped_data.py  prepared_data.py  raw_data.py
